# django-celery-payouts

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
apps/: __init__.py
apps/payouts/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/payouts/migrations/: 0001_initial.py  __init__.py
apps/payouts/tests/: __init__.py  conftest.py  test_api.py  test_serializers.py  test_services.py  test_tasks.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  production.py  test.py
scripts/: verify_setup.sh
