[project]
name = "django-celery-payouts"
version = "0.1.0"
description = "Payout Management Service built with Django, DRF, and Celery."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]
authors = [
    { name = "Your Name", email = "you@example.com" },
]

[tool.poetry]
packages = [
    { include = "config" },
    { include = "apps" },
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.14"
celery = "^5.3"
gunicorn = "*"
psycopg = { extras = ["binary"], version = "*" }
redis = "*"
django-filter = "*"
django-environ = "*"
drf-spectacular = "*"
dj-database-url = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-django = "*"
pytest-cov = "*"
ruff = "*"
mypy = "*"
django-stubs = "*"
djangorestframework-stubs = "*"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
